[delivers #184401371 #184401362 #184401353 #184238374 #184238362] Updeted barber, service and booking controllers. Added updateById and deleteById methods
